@@ -94,13 +94,13 @@ def makeSTRM(filepath, filename, url):
                 fle = xbmcvfs.File(fullpath, 'w')
                 pass
 
-            fle.write(bytearray(url, 'utf-8'))
+            fle.write(bytearray(url.decode('utf-8'), 'utf-8'))
             fle.close()
             del fle
 
             try:
                 if fullpath.find('Audio') > 0:
-                    mtime = os.path.getmtime(fullpath)
+                    mtime = xbmcvfs.Stat(fullpath).st_mtime()
             except OSError:
                 pass
 
