@@ -22,6 +22,7 @@
 		<setting label="31002" type="slider" id="paging_movies" default="2" range="1,100" option="int"/>
 		<setting label="31003" type="bool" id="folder_medialistentry_movie" default="true"/>
 		<setting label="31005" type="bool" id="folder_movie" default="false"/>
+		<setting label="31006" type="enum" id="search_thetvdb" lvalues='31101|31102|31103' default="0"/>
 	</category>
 	<category label="33000">
 		<setting label="33001" type="bool" id="Update_at_startup" default="true"/>
